--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ width: 250px;
 background-color: black;
 color: white;
 }
-.weather button {
+/* .weather button{
 background-color: green;
 padding: 10px;
 width: 100px;
@@ -46,7 +46,7 @@ color: black;
 border: none;
 outline: none;
 border-radius: 10px;
-}
+} */
 .leaflet-container {
   height: 500px;
   width: 100%;
@@ -106,5 +106,84 @@ border-radius: 10px;
 .weatherDetails{
 	color: white;
 	
+}
+.selectButton{
+	background-color: blue;
+	color: white;
+	padding: 10px;
+	border-radius: 5px;
+	cursor: pointer;
+	width: 200px;
+	height: 70px;
+	border: none;
+	outline: none;
+	margin-right: 10px;
+	font-size: 18px;
+	font-weight: bold;
+}
+.activeDateTab{
+	background-color: green;
+	color: white;
+        padding: 10px;
+        border-radius: 5px;
+        cursor: pointer;
+        width: 200px;
+        height: 80px;
+        border: none;
+        outline: none;
+        margin-right: 10px;
+	font-size: 18px;
+        font-weight: bold;
+}
+.three{
+	background-color: rgba(255, 255, 255, 0.8);
+	padding: 10px;
+	border-radius: 5px;
+	width: 550px;
+	white-space: nowrap;
+	overflow-x: auto;
+	margin: 0 0 0 20px;
+}
+.threeDays {
+  color: black;
+  border-radius: 20px;
+  margin: 0 auto;
+  display: flex;
+  gap: 12px;
+  padding: 16px;
+
+  overflow-x: auto;   /* sideways scroll */
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+.threeDays::-webkit-scrollbar {
+  height: 6px;
+}
+
+.threeDaysDetails {
+  border-radius: 10px;
+  padding: 10px;
+  min-width: 90px;
+  text-align: center;
+  flex-shrink: 0;   /* keep box size fixed */
+}
+
+.threeDaysDetails p {
+  font-size: 18px;
+  font-weight: bold;
+  color: black;
+  margin: 2px 0 0 20px;
+}
+.sevenDays {
+	background-color: rgba(255, 255, 255, 0.8);
+        padding: 10px;
+        border-radius: 5px;
+        width: 550px;
+	margin: 15px 0 0 20px;
+}
+.sevenDays h4, .sevenDays p{
+	color: black;
+	font-weight: bold;
 }
 
